[gd_scene load_steps=33 format=3 uid="uid://blysrdlx5eonv"]

[ext_resource type="Script" uid="uid://duagl762l62nn" path="res://Scripts/mainScript.gd" id="1_y0sr0"]
[ext_resource type="AudioStream" uid="uid://jq7232ogh2id" path="res://assets/audio/loop.mp3" id="2_cabr8"]
[ext_resource type="AudioStream" uid="uid://ctkww2cb68ij2" path="res://assets/audio/build up.mp3" id="2_pnj31"]
[ext_resource type="Shader" uid="uid://bjkv8gfx5kt31" path="res://shaders/main_window.gdshader" id="2_u8km4"]
[ext_resource type="Shader" uid="uid://g6d3p2lgtdba" path="res://shaders/textfloat.gdshader" id="3_wsc84"]
[ext_resource type="Theme" uid="uid://ccm30crfj0bt3" path="res://theme/def theme.tres" id="4_7m4et"]
[ext_resource type="Texture2D" uid="uid://ccaovxfm1hlty" path="res://assets/icon_color_outline.png" id="4_e8t6l"]
[ext_resource type="Texture2D" uid="uid://dkunq3hxi8qel" path="res://assets/cupanidle.png" id="5_ug8hw"]
[ext_resource type="Script" uid="uid://bpkx3484rm3oc" path="res://Scripts/transparent.gd" id="5_xw0eb"]
[ext_resource type="Texture2D" uid="uid://gfwverdlvrb2" path="res://assets/settingsicon.png" id="8_s3e8v"]
[ext_resource type="Script" uid="uid://bwtgy2fqlxxi" path="res://Scripts/settingsWindow.gd" id="14_540og"]
[ext_resource type="Texture2D" uid="uid://bl0b1w1sgrmqd" path="res://assets/cantalope.png" id="15_ci6dk"]
[ext_resource type="Shader" uid="uid://b8edv8p5wvtlw" path="res://shaders/pixelate.gdshader" id="16_jsaha"]
[ext_resource type="Theme" uid="uid://omxrn8usvpae" path="res://theme/quickbtn.tres" id="17_06bn0"]
[ext_resource type="Texture2D" uid="uid://wpguemih2xei" path="res://assets/arrowBack.png" id="18_1th4f"]
[ext_resource type="AudioStream" uid="uid://bhr7kxp6y3ma3" path="res://assets/audio/drop.mp3" id="19_gok2i"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5k35g"]
shader = ExtResource("2_u8km4")
shader_parameter/strength = 0.665
shader_parameter/speed = 0.3
shader_parameter/angle = 122.637

[sub_resource type="Gradient" id="Gradient_0di1y"]
offsets = PackedFloat32Array(0, 0.93038)
colors = PackedColorArray(1, 1, 1, 1, 0.51, 0.51, 0.51, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_aacq4"]
gradient = SubResource("Gradient_0di1y")
fill_to = Vector2(1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5kivu"]
shader = ExtResource("3_wsc84")
shader_parameter/height = 5.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4bfu3"]
shader = ExtResource("3_wsc84")
shader_parameter/height = 2.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m4uvf"]
shader = ExtResource("3_wsc84")
shader_parameter/height = 2.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ervhw"]
shader = ExtResource("3_wsc84")
shader_parameter/height = 2.0

[sub_resource type="Animation" id="Animation_8y0qu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transitionAnimation/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transitionAnimation/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_h7555"]
resource_name = "fade"
length = 1.78
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transitionAnimation/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1.78),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transitionAnimation/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_iss2k"]
resource_name = "faze"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i1ccy"]
_data = {
&"RESET": SubResource("Animation_8y0qu"),
&"fade": SubResource("Animation_h7555"),
&"faze": SubResource("Animation_iss2k")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ccg75"]
resource_local_to_scene = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x1v5k"]
shader = ExtResource("16_jsaha")
shader_parameter/pixel_size = 2.0

[sub_resource type="Animation" id="Animation_2uxv3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_s85oi"]
resource_name = "idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sien5"]
_data = {
&"RESET": SubResource("Animation_2uxv3"),
&"idle": SubResource("Animation_s85oi")
}

[node name="Control" type="Control" node_paths=PackedStringArray("transitionTexture", "settingsWindow", "resultsWindow", "operatorButton", "settingsButton", "answerButton", "NumField1", "creditsButton", "BackButton", "loopAudio", "buildUpAudio", "dropAudio", "colorRect", "cupanAnim", "resultsRichLabel", "cantalpope")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y0sr0")
transitionTexture = NodePath("transitionAnimation")
settingsWindow = NodePath("settingsWindow")
resultsWindow = NodePath("results")
operatorButton = NodePath("operator")
settingsButton = NodePath("settingsButton")
answerButton = NodePath("answerButton")
NumField1 = NodePath("1stNumField1")
creditsButton = NodePath("settingsWindow/creditsButton")
BackButton = NodePath("results/backButton")
loopAudio = NodePath("loopAudio")
buildUpAudio = NodePath("buildupAudio")
dropAudio = NodePath("dropAudio")
colorRect = NodePath("transitionAnimation/ColorRect")
cupanAnim = NodePath("settingsWindow/cupan/cupanAnim")
resultsRichLabel = NodePath("results/resultsText")
cantalpope = NodePath("results/cantalpope")

[node name="rainbowBackground" type="TextureRect" parent="."]
self_modulate = Color(0, 0, 0, 1)
material = SubResource("ShaderMaterial_5k35g")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_aacq4")

[node name="answerButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -242.0
offset_top = -88.0
offset_right = 208.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 35
text = "answer"

[node name="titleText" type="RichTextLabel" parent="."]
material = SubResource("ShaderMaterial_5kivu")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -185.0
offset_top = 46.0
offset_right = 171.0
offset_bottom = 243.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.152941)
theme_override_constants/outline_size = 20
theme_override_constants/shadow_offset_y = 9
theme_override_constants/shadow_offset_x = 8
theme_override_font_sizes/normal_font_size = 70
bbcode_enabled = true
text = "[rainbow freq=0.3 sat=0.9 val=1][center][wave amp=50.0 freq=5.0 connected=1]Awesome 
Calculator[/wave][/center][/rainbow]"
scroll_active = false
autowrap_mode = 0

[node name="1stNumField1" type="OptionButton" parent="." node_paths=PackedStringArray("option1", "option2", "option3", "option4", "option5")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -283.0
offset_top = -31.0
offset_right = -193.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("../settingsButton")
focus_neighbor_right = NodePath("../1stNumField2")
focus_next = NodePath("../1stNumField2")
theme = ExtResource("4_7m4et")
theme_override_font_sizes/font_size = 30
alignment = 1
selected = 0
allow_reselect = true
item_count = 10
popup/item_0/text = "0"
popup/item_0/id = 0
popup/item_1/text = "1"
popup/item_1/id = 1
popup/item_2/text = "2"
popup/item_2/id = 2
popup/item_3/text = "3"
popup/item_3/id = 3
popup/item_4/text = "4"
popup/item_4/id = 4
popup/item_5/text = "5"
popup/item_5/id = 5
popup/item_6/text = "6"
popup/item_6/id = 6
popup/item_7/text = "7"
popup/item_7/id = 7
popup/item_8/text = "8"
popup/item_8/id = 8
popup/item_9/text = "9"
popup/item_9/id = 9
script = ExtResource("5_xw0eb")
option1 = NodePath(".")
option2 = NodePath("../1stNumField2")
option3 = NodePath("../operator")
option4 = NodePath("../2ndNumField1")
option5 = NodePath("../2ndNumField2")

[node name="1stNumField2" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.0
offset_top = -31.0
offset_right = -95.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath("../1stNumField1")
focus_neighbor_top = NodePath("../settingsButton")
focus_neighbor_right = NodePath("../operator")
focus_next = NodePath("../operator")
focus_previous = NodePath("../1stNumField1")
theme = ExtResource("4_7m4et")
theme_override_font_sizes/font_size = 30
alignment = 1
selected = 0
allow_reselect = true
item_count = 10
popup/item_0/text = "0"
popup/item_0/id = 0
popup/item_1/text = "1"
popup/item_1/id = 1
popup/item_2/text = "2"
popup/item_2/id = 2
popup/item_3/text = "3"
popup/item_3/id = 3
popup/item_4/text = "4"
popup/item_4/id = 4
popup/item_5/text = "5"
popup/item_5/id = 5
popup/item_6/text = "6"
popup/item_6/id = 6
popup/item_7/text = "7"
popup/item_7/id = 7
popup/item_8/text = "8"
popup/item_8/id = 8
popup/item_9/text = "9"
popup/item_9/id = 9

[node name="operator" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.9995
offset_top = -30.0
offset_right = 44.9995
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath("../1stNumField2")
focus_neighbor_top = NodePath("../settingsButton")
focus_neighbor_right = NodePath("../2ndNumField1")
focus_next = NodePath("../2ndNumField1")
focus_previous = NodePath("../1stNumField2")
theme = ExtResource("4_7m4et")
theme_override_font_sizes/font_size = 30
alignment = 1
selected = 0
allow_reselect = true
item_count = 5
popup/item_0/text = "+"
popup/item_0/id = 0
popup/item_1/text = "-"
popup/item_1/id = 1
popup/item_2/text = "×"
popup/item_2/id = 2
popup/item_3/text = "/"
popup/item_3/id = 3
popup/item_4/text = "^"
popup/item_4/id = 4

[node name="2ndNumField1" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -30.0
offset_right = 190.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath("../operator")
focus_neighbor_top = NodePath("../settingsButton")
focus_neighbor_right = NodePath("../2ndNumField2")
focus_next = NodePath("../2ndNumField2")
focus_previous = NodePath("../operator")
theme = ExtResource("4_7m4et")
theme_override_font_sizes/font_size = 30
alignment = 1
selected = 0
allow_reselect = true
item_count = 10
popup/item_0/text = "0"
popup/item_0/id = 0
popup/item_1/text = "1"
popup/item_1/id = 1
popup/item_2/text = "2"
popup/item_2/id = 2
popup/item_3/text = "3"
popup/item_3/id = 3
popup/item_4/text = "4"
popup/item_4/id = 4
popup/item_5/text = "5"
popup/item_5/id = 5
popup/item_6/text = "6"
popup/item_6/id = 6
popup/item_7/text = "7"
popup/item_7/id = 7
popup/item_8/text = "8"
popup/item_8/id = 8
popup/item_9/text = "9"
popup/item_9/id = 9

[node name="2ndNumField2" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 198.0
offset_top = -30.0
offset_right = 288.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath("../2ndNumField1")
focus_neighbor_top = NodePath("../settingsButton")
focus_previous = NodePath("../2ndNumField1")
theme = ExtResource("4_7m4et")
theme_override_font_sizes/font_size = 30
alignment = 1
selected = 0
allow_reselect = true
item_count = 10
popup/item_0/text = "0"
popup/item_0/id = 0
popup/item_1/text = "1"
popup/item_1/id = 1
popup/item_2/text = "2"
popup/item_2/id = 2
popup/item_3/text = "3"
popup/item_3/id = 3
popup/item_4/text = "4"
popup/item_4/id = 4
popup/item_5/text = "5"
popup/item_5/id = 5
popup/item_6/text = "6"
popup/item_6/id = 6
popup/item_7/text = "7"
popup/item_7/id = 7
popup/item_8/text = "8"
popup/item_8/id = 8
popup/item_9/text = "9"
popup/item_9/id = 9

[node name="dropdownDescriptions" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -295.0
offset_top = -300.0
offset_right = -255.0
offset_bottom = -260.0
grow_horizontal = 2
grow_vertical = 2

[node name="firstDesc" type="RichTextLabel" parent="dropdownDescriptions"]
material = SubResource("ShaderMaterial_4bfu3")
layout_mode = 0
offset_left = 18.0
offset_top = 343.0
offset_right = 204.0
offset_bottom = 387.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[tornado radius=1.0 freq=20.0][img=25]res://assets/indexfinger.png[/img]   first number[/tornado]"
scroll_active = false

[node name="operatorDesc" type="RichTextLabel" parent="dropdownDescriptions"]
material = SubResource("ShaderMaterial_m4uvf")
layout_mode = 0
offset_left = 238.0
offset_top = 343.0
offset_right = 365.0
offset_bottom = 387.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[tornado radius=1.0 freq=20.0][img=25]res://assets/indexfinger.png[/img]  operator[/tornado]"
scroll_active = false

[node name="secondDesc" type="RichTextLabel" parent="dropdownDescriptions"]
material = SubResource("ShaderMaterial_ervhw")
layout_mode = 0
offset_left = 412.0
offset_top = 343.0
offset_right = 574.0
offset_bottom = 402.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[tornado radius=1.0 freq=20.0][img=25]res://assets/indexfinger.png[/img]   2nd number[/tornado]"
scroll_active = false

[node name="buildupAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_pnj31")

[node name="loopAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_cabr8")
autoplay = true

[node name="dropAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_gok2i")

[node name="transitionAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_i1ccy")
}

[node name="ColorRect" type="ColorRect" parent="transitionAnimation"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="settingsButton" type="Button" parent="."]
layout_mode = 1
offset_left = 5.0
offset_top = 5.0
offset_right = 55.0
offset_bottom = 55.0
focus_neighbor_bottom = NodePath("../1stNumField1")
focus_previous = NodePath("../1stNumField1")
theme = ExtResource("4_7m4et")
icon = ExtResource("8_s3e8v")
icon_alignment = 1

[node name="results" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="whiteBackground" type="ColorRect" parent="results"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="resultsText" type="RichTextLabel" parent="results"]
modulate = Color(0, 0, 0, 1)
material = SubResource("ShaderMaterial_ccg75")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -47.995
offset_right = 300.0
offset_bottom = 300.505
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../backButton")
focus_neighbor_top = NodePath("../backButton")
focus_neighbor_right = NodePath("../backButton")
focus_previous = NodePath("../backButton")
focus_mode = 2
theme_override_font_sizes/normal_font_size = 60
theme_override_font_sizes/bold_font_size = 60
bbcode_enabled = true
text = "[center]0000[/center]"

[node name="cantalpope" type="TextureRect" parent="results"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.0
offset_top = -109.0
offset_right = 43.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
texture = ExtResource("15_ci6dk")

[node name="ColorRect" type="ColorRect" parent="results"]
material = SubResource("ShaderMaterial_x1v5k")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="backButton" type="Button" parent="results"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 58.0
offset_bottom = 58.0
focus_neighbor_right = NodePath("../resultsText")
focus_neighbor_bottom = NodePath("../resultsText")
focus_next = NodePath("../resultsText")
focus_previous = NodePath("../resultsText")
theme = ExtResource("17_06bn0")
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
icon = ExtResource("18_1th4f")
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="settingsWindow" type="Window" parent="."]
title = "credits.exe"
initial_position = 1
size = Vector2i(440, 225)
visible = false
unresizable = true
always_on_top = true
script = ExtResource("14_540og")

[node name="rainbowBackground" type="TextureRect" parent="settingsWindow"]
self_modulate = Color(0, 0, 0, 1)
material = SubResource("ShaderMaterial_5k35g")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -25.05
offset_right = 38.95
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.33, 1.33)
size_flags_horizontal = 4
texture = SubResource("GradientTexture2D_aacq4")
metadata/_edit_lock_ = true

[node name="creditsText" type="RichTextLabel" parent="settingsWindow"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.747
offset_top = -75.29
offset_right = 245.263
offset_bottom = 143.845
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "- app by
- made with godot 


"
scroll_active = false
autowrap_mode = 0

[node name="deaenButton" type="Button" parent="settingsWindow"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 173.0
offset_top = -189.0
offset_right = 340.0
offset_bottom = -103.0
grow_vertical = 0
scale = Vector2(0.7, 0.7)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 57
text = "deaen"

[node name="godotLogo" type="TextureRect" parent="settingsWindow"]
offset_left = 358.195
offset_top = 112.835
offset_right = 400.196
offset_bottom = 154.835
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_e8t6l")

[node name="creditsButton" type="Button" parent="settingsWindow"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 17.855
offset_top = -51.535
offset_right = 417.855
offset_bottom = 7.58011
grow_vertical = 0
scale = Vector2(0.7, 0.7)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 27
text = "song:  DEAF KEV - Invincible"

[node name="cupan" type="Sprite2D" parent="settingsWindow"]
texture_filter = 1
position = Vector2(312.1, 68.75)
texture = ExtResource("5_ug8hw")
hframes = 3

[node name="cupanAnim" type="AnimationPlayer" parent="settingsWindow/cupan"]
libraries = {
&"": SubResource("AnimationLibrary_sien5")
}

[connection signal="pressed" from="answerButton" to="." method="_on_answer_button_pressed"]
[connection signal="item_selected" from="1stNumField1" to="." method="_on_st_num_field_1_item_selected"]
[connection signal="item_selected" from="1stNumField2" to="." method="_on_st_num_field_2_item_selected"]
[connection signal="item_selected" from="operator" to="." method="_on_operator_item_selected"]
[connection signal="item_selected" from="2ndNumField1" to="." method="_on_nd_num_field_1_item_selected"]
[connection signal="item_selected" from="2ndNumField2" to="." method="_on_nd_num_field_2_item_selected"]
[connection signal="pressed" from="settingsButton" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="results/backButton" to="." method="_on_back_button_pressed"]
[connection signal="close_requested" from="settingsWindow" to="." method="_on_settings_window_close_requested"]
[connection signal="pressed" from="settingsWindow/deaenButton" to="." method="_on_deaen_button_pressed"]
[connection signal="pressed" from="settingsWindow/creditsButton" to="." method="_on_credits_button_pressed"]
